- bug fix: check for game over when get onclick on a score button - Only discards a key stroke if the focus is on a input text, not all inputs anymore - reordering inputs: input text player name now comes before "Update Names" button following the visual pattern - removing 'visible' parameter from CommentBox Constructor, which wasn't treated - fixing positioning of comment box on mock files

--- a/css/local.css
+++ b/css/local.css
@@ -95,14 +95,14 @@
 .comment-box {
   background-image: url('../images/comment.png');
   width: 276px;
-  height: 82px;
-  top: 414px;
+  height: 62px;
+  top: 390px;
   left: 670px;
   position: absolute;
   color: white;
   font-family: sans-serif;
   font-weight: bold;
-  padding: 8px 12px;
+  padding: 28px 12px 8px 12px;
   font-size: 14px;
 }
 
